# cpp-rvanal

./: ChangeLog  Makefile.am  README  configure.ac  test_dist  warnings
doc/: Changes.html  Doxyfile.bak  Doxyfile.in  GettingStarted.html  Makefile.am  docgen.in
include/: Makefile.am  trm_rvanal.h  trm_sequence.h
include/trm/: rvanal.h  sequence.h
src/: Makefile.am  aliases.cc  bayes.cc  bayes_prob.cc  bayes_trap.cc  bestsin.cc  dpb.cc  dpopt.cc  dprob.cc  fm.cc  m2min.cc  mergers.cc  nthalias.cc  pdist.cc  pfold.cc  pgram.cc  prob_int.cc  rverr.cc  scargle.cc  sindet.cc  sinfalse.cc  sinfit_chisq.cc  sinfit_errors.cc  sintest.cc  stest.cc  vtest.cc  vtest_plot.cc
